# xorg__driver__xf86-video-nsc

./: ChangeLog  Makefile.am  README  configure.ac
man/: Makefile.am  nsc.man
src/: Makefile.am  assyntax.h  durango.c  nsc.h  nsc_driver.c  nsc_fourcc.h  nsc_galfns.c  nsc_galstub.c  nsc_gx1_accel.c  nsc_gx1_cursor.c  nsc_gx1_dga.c  nsc_gx1_driver.c  nsc_gx1_shadow.c  nsc_gx1_video.c  nsc_gx2_accel.c  nsc_gx2_cursor.c  nsc_gx2_dga.c  nsc_gx2_driver.c  nsc_gx2_shadow.c  nsc_gx2_vga.c  nsc_gx2_video.c  nsc_msr_asm.S  nsc_pcirename.h  nsc_regacc.c  panel.c
src/gfx/: disp_gu1.c  disp_gu2.c  durango.c  gfx_dcdr.c  gfx_defs.h  gfx_disp.c  gfx_i2c.c  gfx_init.c  gfx_mode.h  gfx_msr.c  gfx_regs.h  gfx_rndr.c  gfx_rtns.h  gfx_tv.c  gfx_tv.h  gfx_type.h  gfx_vga.c  gfx_vid.c  gfx_vip.c  history.h  i2c_acc.c  i2c_gpio.c  init_gu1.c  init_gu2.c  msr_rdcl.c  release.txt  rndr_gu1.c  rndr_gu2.c  saa7114.c  tv_1200.c  tv_fs450.c  tv_fs450.h  tv_fs451.c  tv_geode.c  vga_gu1.c  vid_1200.c  vid_1400.c  vid_5530.c  vid_rdcl.c  vip_1200.c  (+1 more)
src/panel/: 92xx.h  cen9211.c  cen9211.h  dora9211.c  dora9211.h  drac9210.c  drac9210.h  gx2_9211.c  gx2_9211.h  panel.c  panel.h  platform.c  pnl_bios.c  pnl_defs.h  pnl_init.c
xf86-video-nsc-2.8.3/: Makefile.am
